--- a/essp.project
+++ b/essp.project
@@ -1,5 +1,5 @@
 <NotepadPlus>
-    <Project name="expl">
+    <Project name="essp">
         <Folder name="css">
             <File name="css\main.css" />
         </Folder>
